# etrobocon2019

./: .gitignore  .restyled.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  README.md  _algorithm_to_park_8md.html  _algorithm_to_park_8md_source.html  _block_bingo_8cpp.html  _block_bingo_8cpp__incl.map  _block_bingo_8cpp__incl.md5  _block_bingo_8cpp_source.html  _block_bingo_8h.html  _block_bingo_8h__dep__incl.map  _block_bingo_8h__dep__incl.md5  _block_bingo_8h__incl.map  _block_bingo_8h__incl.md5  _block_bingo_8h_source.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md_source.html  _calibrator_8cpp.html  _calibrator_8cpp__incl.map  _calibrator_8cpp__incl.md5  _calibrator_8cpp_source.html  _calibrator_8h.html  _calibrator_8h__dep__incl.map  _calibrator_8h__dep__incl.md5  _calibrator_8h__incl.map  _calibrator_8h__incl.md5  _calibrator_8h_source.html  _controller_8cpp.html  _controller_8cpp__incl.map  _controller_8cpp__incl.md5  _controller_8cpp_source.html  _controller_8h.html  _controller_8h__dep__incl.map  _controller_8h__dep__incl.md5  _controller_8h__incl.map  _controller_8h__incl.md5  _controller_8h_source.html  (+421 more)
.circleci/: config.yml  deploy_doxygen.sh
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank_template.md  main_template.md  ticket------.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/workflows/: build.yml
cmake/: CodeCoverage.cmake
docs/: チェックリスト改.xlsx  ブロックビンゴエリアにおける走行体の動作定義書.docx  競技規約の簡略化.docx
docs/BlockBingo/: block_bingo.md
docs/Odometory/: odometry.md
docs/garageParking/: AlgorithmToPark.md
ev3-api/: ev3api.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  defines_0.js  defines_1.js  defines_2.html  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+41 more)
src/: EtRobocon2019.cpp  EtRobocon2019.h  Makefile.inc  app  app.cfg  app.cpp  app.h
src/api/: Controller.cpp  Controller.h  Display.cpp  Display.h
src/module/: BlockBingo.cpp  BlockBingo.h  Bluetooth.cpp  Bluetooth.h  Calibrator.cpp  Calibrator.h  Curvature.cpp  Curvature.h  Distance.cpp  Distance.h  EtRobocon2019.cpp  EtRobocon2019.h  Filter.cpp  Filter.h  Instructions.cpp  Instructions.h  LineTracer.cpp  LineTracer.h  Logger.cpp  Logger.h  MoveDirectGarage.cpp  MoveDirectGarage.h  Navigator.cpp  Navigator.h  NormalCource.cpp  NormalCource.h  NormalCourceProperty.h  NormalCourse.cpp  NormalCourse.h  Parking.cpp  Parking.h  Pid.cpp  Pid.h  Rotation.cpp  Rotation.h  SpeedControl.cpp  SpeedControl.h  TurnControl.cpp  TurnControl.h
src/module/api/: Bluetooth.cpp  Bluetooth.h  Display.cpp
src/module/api/core/: Controller.cpp  Controller.h
test/: BlockBingoTest.cpp  CalibratorTest.cpp  ControllerTest.cpp  CurvatureTest.cpp  DistanceTest.cpp  EtRobocon2019Test.cpp  FilterTest.cpp  Instructions.cpp  InstructionsTest.cpp  LineTracerTest.cpp  LoggerTest.cpp  MoveDirectGarageTest.cpp  NavigatorTest.cpp  NormalCourceTest.cpp  NormalCourseTest.cpp  ParkingTest.cpp  PidTest.cpp  RotationTest.cpp  SpeedControlTest.cpp  SpeedControlTest2.cpp  TurnControlTest.cpp
test/dummy/: Controller.cpp  Controller.h  SpeedControl.cpp  SpeedControl.h
test/gtest/: CMakeLists.txt  gtest_build.sh  gtest_coverage.sh  gtest_debugging.sh  gtest_start.sh
